# Tetris

./: CMakeLists.txt
src/: CMakeLists.txt
src/model/: CMakeLists.txt  qmldir  tetris.cpp  tetris.h  tetris_plugin.cpp  tetris_plugin.h
src/ui/: ButtonRestart.qml  CMakeLists.txt  main.qml  qmldir
test/: CMakeLists.txt  test.h
